# idynutils

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.orig  README.md
bindings/: CMakeLists.txt  main.py  pydynutils.i
doc/: CMakeLists.txt  Doxyfile.in  walkman-idynutils.dox
examples/: CMakeLists.txt  distance_query.cpp  example_convex_hull.cpp
include/idynutils/: ControlType.hpp  RobotUtils.h  WalkmanUtils.h  cartesian_utils.h  cartesian_utils.h.orig  collision_utils.h  comanutils.h  comanutils.h.orig  convex_hull.h  convex_hull.h.orig  convex_hull2D.h  idynutils.h  idynutils.h.orig  octomap_utils.h  tests_utils.h  tests_utils.h.orig  yarp_IMU_interface.h  yarp_IMU_interface.h.orig  yarp_ft_interface.h  yarp_ft_interface.h.orig  yarp_single_chain_interface.h  yarp_single_chain_interface.h.orig
python/pydynutils/: __init__.py  pydrc.py  pydynutils.py
src/: ComanUtils.cpp  RobotUtils.cpp  WalkmanUtils.cpp  cartesian_utils.cpp  cartesian_utils.cpp.orig  collision_utils.cpp  comanutils.cpp  convex_hull.cpp  convex_hull.cpp.orig  convex_hull2D.cpp  idynutils.cpp  idynutils.cpp.orig  octomap_utils.cpp  tests_utils.cpp  yarp_IMU_interface.cpp  yarp_IMU_interface.cpp.orig  yarp_ft_interface.cpp  yarp_ft_interface.cpp.orig  yarp_single_chain_interface.cpp  yarp_single_chain_interface.cpp.orig
tests/: CMakeLists.txt  CMakeLists.txt.orig  cartesian_utils_tests.cpp  collision_utils_tests.cpp  convex_hull_tests.cpp  idyn_utils_tests.cpp  idyn_utils_tests.cpp.orig  robot_utils_tests.cpp  test_interfaces.cpp  test_interfaces.cpp.orig  tests_utils_tests.cpp  tests_utils_tests.cpp.orig  yarp_single_chain_interface_tests.cpp
tests/data/: octomap.bag
tests/robots/bigman/: bigman.srdf  bigman.urdf  bigman_capsules.urdf
tests/robots/coman/: coman.srdf
